NEW: added a couple of simple test cases